# uwave

./: .editorconfig  .gitignore  Dockerfile_dev  README.md  analyze.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.metaflow/UwaveFlow/: latest_run
.metaflow/UwaveFlow/1737972214148836/_meta/: _self.json
.metaflow/UwaveFlow/1737972214148836/_parameters/0/: 0.attempt.json
.metaflow/UwaveFlow/1737972214148836/_parameters/0/_meta/: 0_artifact__foreach_stack.json  0_artifact__graph_info.json  0_artifact__success.json  0_artifact__task_ok.json  0_artifact__transition.json  (+7 more)
.metaflow/UwaveFlow/1737972214148836/_parameters/_meta/: _self.json
.metaflow/UwaveFlow/1737972214148836/end/2/: 0.attempt.json  0.data.json
.metaflow/UwaveFlow/1737972214148836/end/_meta/: _self.json
.metaflow/UwaveFlow/1737972214148836/start/1/: 0.attempt.json  0.data.json
.metaflow/UwaveFlow/1737972214148836/start/_meta/: _self.json
.metaflow/UwaveFlow/1737972344751292/_meta/: _self.json
.metaflow/UwaveFlow/1737972344751292/_parameters/0/: 0.attempt.json  0.data.json
.metaflow/UwaveFlow/1737972344751292/_parameters/_meta/: _self.json
.metaflow/UwaveFlow/1737972344751292/end/2/: 0.attempt.json
.metaflow/UwaveFlow/1737972344751292/end/_meta/: _self.json
.metaflow/UwaveFlow/1737972344751292/start/1/: 0.attempt.json
.metaflow/UwaveFlow/1737972344751292/start/_meta/: _self.json
.metaflow/UwaveFlow/_meta/: _self.json
data/: dataset_update_example.json  gesture_data.parquet  inference_example.json
src/: data_load.py  server.py  uwave_flow.py
tests/: test_endpoints.py
(+112 files in other folders)
